# kt-tr

./: README.md  pyproject.toml
kt_tr/: cli.py  kt_tr.py
tests/: test_kt_tr.py
